After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 723931 - 3.11.5 GNOME breaks HiDPI
3.11.5 GNOME breaks HiDPI
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
3.11.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2014-02-09 01:26 UTC by Hashem Nasarat
Modified: 2014-02-09 15:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Disable clutter's high dpi scaling (845 bytes, patch)
2014-02-09 15:03 UTC, drago01
needs-work Details | Review
Disable clutter's high dpi scaling (1.10 KB, patch)
2014-02-09 15:19 UTC, drago01
committed Details | Review

Description Hashem Nasarat 2014-02-09 01:26:22 UTC
I'm running Fedora rawhide and just updated everything to 3.11.5.
Now on a HiDPI laptop things are scaled 4x normal, and 2x what they ought to be.

http://imgur.com/4u2JSv6

mclasen thought maybe this was falling out from clutter learning about scaling.

I'm not sure if gnome-shell is the right place for this, since it appears that GTK+ is also affected.
Comment 1 drago01 2014-02-09 14:46:52 UTC
Yeah this is indeed because of clutter using scaling now. The monitor sizes the shell uses no longer make sense, and the windows are already scaled and now end up being scaled twice.
Comment 2 drago01 2014-02-09 14:50:48 UTC
See bug 710503
Comment 3 drago01 2014-02-09 15:03:37 UTC
Created attachment 268580 [details] [review]
Disable clutter's high dpi scaling

mutter needs some work to work with high dpi scaling so disable
the scaling until that is fixed.

---

Here is a workaround that restores stuff what it was in 3.10, I am
not confident that we will fix everything for 3.12 to work with the
scaling set, so this patch just disables it for mutter.

We can remove it again once someone fixes it.
Comment 4 Jasper St. Pierre (not reading bugmail) 2014-02-09 15:08:15 UTC
Review of attachment 268580 [details] [review]:

Sure.
Comment 5 Jasper St. Pierre (not reading bugmail) 2014-02-09 15:08:44 UTC
Review of attachment 268580 [details] [review]:

Actually, wait, no. Use the API for this, so that apps launched from the shell don't inherit this envvar.
Comment 6 drago01 2014-02-09 15:11:26 UTC
(In reply to comment #5)
> Review of attachment 268580 [details] [review]:
> 
> Actually, wait, no. Use the API for this, so that apps launched from the shell
> don't inherit this envvar.

Oh good point.
Comment 7 drago01 2014-02-09 15:19:36 UTC
Created attachment 268581 [details] [review]
Disable clutter's high dpi scaling

mutter needs some work to work with high dpi scaling so disable
the scaling until that is fixed.


---
OK that sets the property instead of messing with the env var.
Comment 8 Jasper St. Pierre (not reading bugmail) 2014-02-09 15:20:36 UTC
Review of attachment 268581 [details] [review]:

OK.
Comment 9 drago01 2014-02-09 15:22:41 UTC
Attachment 268581 [details] pushed as 45ff615 - Disable clutter's high dpi scaling